<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_by"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_date_newest"
                android:title="@string/sort_by_date_newest"
                android:orderInCategory="1" />
            <item
                android:id="@+id/sort_date_oldest"
                android:title="@string/sort_by_date_oldest"
                android:orderInCategory="2" />
            <item
                android:id="@+id/sort_title_az"
                android:title="@string/sort_by_title_az"
                android:orderInCategory="3" />
            <item
                android:id="@+id/sort_title_za"
                android:title="@string/sort_by_title_za"
                android:orderInCategory="4" />
        </menu>
    </item>

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never"
        android:orderInCategory="100" />

</menu>